feat: 현재 참여중인 카톡방 정보 조회 기능 구현